added REST routes for customer data manipulation
