# components/routing/routes.js
@@ -5,7 +5,7 @@ const jwt = require(`jsonwebtoken`)
 
 const hashPassword = require(`../database/hash_password`)
 
-function routing (server, dbTable, config) {
+function routing (server, tableUsers, tableCustomers, config) {
   server.use((req, res, next) => {
     res.append(`Access-Control-Allow-Origin`, [`http://localhost:3000`])
     res.append(`Access-Control-Allow-Headers`, [`Authorization`, `Content-Type`])
@@ -13,7 +13,7 @@ function routing (server, dbTable, config) {
   })
 
   server.post(`/users`, (req, res) => {
-    userRegistration(dbTable, req.body, (err, success, email) => {
+    userRegistration(tableUsers, req.body, (err, success, email) => {
       if (err) {
         return res
           .status(500)
@@ -53,7 +53,7 @@ function routing (server, dbTable, config) {
           })
         }
 
-        dbTable.findOne({ where: { uuid: verification.uuid } })
+        tableUsers.findOne({ where: { relation_id: verification.relation_id } })
           .then((user) => {
             return res
               .status(200)
@@ -83,13 +83,13 @@ function routing (server, dbTable, config) {
   })
 
   server.put(`/users`, (req, res) => {
-    updateUser(dbTable, req.body, (user) => {
-      dbTable.findOne({ where: { email: user } })
+    updateUser(tableUsers, req.body, (user) => {
+      tableUsers.findOne({ where: { email: user } })
       .then((userdata) => {
         const token = jwt.sign({
           sub: `user_autentication`,
           name: userdata.email,
-          uuid: userdata.uuid
+          relation_id: userdata.relation_id
         }, config.auth.secret)
 
         return res.send({
@@ -113,12 +113,12 @@ function routing (server, dbTable, config) {
             })
         }
 
-        dbTable.findOne({ where: { email: verification.name } })
+        tableUsers.findOne({ where: { email: verification.name } })
         .then((user) => {
           const hashedPassword = hashPassword(req.body.password, user.salt)
 
           if (hashedPassword === user.password) {
-            dbTable.destroy({ where: { email: verification.name } })
+            tableUsers.destroy({ where: { email: verification.name } })
             .then(() => {
               return res.send({
                 message: `User deleted`
@@ -171,7 +171,7 @@ function routing (server, dbTable, config) {
         const jwtPayload = {
           sub: `user_authentication`,
           name: user.email,
-          uuid: user.uuid
+          relation_id: user.relation_id
         }
 
         const token = jwt.sign(jwtPayload, config.auth.secret)
@@ -179,7 +179,7 @@ function routing (server, dbTable, config) {
         return res
           .status(200)
           .send({
-            uuid: user.uuid,
+            relation_id: user.relation_id,
             forename: user.forename,
             surname: user.surname,
             email: user.email,
@@ -189,9 +189,285 @@ function routing (server, dbTable, config) {
     })(req, res, next)
   })
 
+  server.get(`/customers`, (req, res) => {
+    const token = req.headers.authorization.replace(`Bearer `, ``)
+
+    if ((token !== `undefined`) && (token !== ``)) {
+      jwt.verify(token, config.auth.secret, (err, verification) => {
+        if (err) {
+          console.log(err)
+          return res
+            .status(401)
+            .send({
+              message: `JWT authentication failed`
+          })
+        }
+
+        console.log(`veri`)
+        console.log(verification.relation_id)
+
+        tableCustomers.findAll({ where: { relation_id: verification.relation_id } })
+          .then((users) => {
+            console.log(users)
+            const customerList = users.map((user) => {
+              return {
+                customer_id: user.customer_id,
+                forename: user.forname,
+                surname: user.surname,
+                phone: user.phone,
+                email: user.email
+              }
+            })
+
+            return res
+              .status(200)
+              .send({
+                customer_list: customerList,
+              })
+          })
+          .catch((err) => {
+            if (err) console.log(err)
+
+            return res
+              .status(500)
+              .send({
+                message: `Internal server error`
+              })
+          })
+      })
+    } else {
+      return res
+        .status(400)
+        .send({
+          message: `Invalid data - cannot computed`
+        })
+    }
+  })
+
+  server.get(`/customers/:customerId`, (req, res) => {
+    const token = req.headers.authorization.replace(`Bearer `, ``)
+
+    if ((token !== `undefined`) && (token !== ``)) {
+      jwt.verify(token, config.auth.secret, (err, verification) => {
+        if (err) {
+          console.log(err)
+          return res
+            .status(401)
+            .send({
+              message: `JWT authentication failed`
+          })
+        }
+
+        tableCustomers.findOne({ where: {
+          customer_id: req.params.customerId,
+          relation_id: verification.relation_id
+        } })
+          .then((customer) => {
+            return res
+              .status(200)
+              .send({
+                customer_id: customer.customer_id,
+                forename: customer.forename,
+                surname: customer.surname,
+                phone: customer.phone,
+                email: customer.email,
+                gender: customer.gender,
+                age: customer.age,
+                dates: [],
+                trainingplans: []
+              })
+          })
+          .catch((err) => {
+            if (err) console.log(err)
+
+            return res
+              .status(500)
+              .send({
+                message: `Internal server error`
+              })
+          })
+      })
+    } else {
+      return res
+        .status(400)
+        .send({
+          message: `Invalid data - cannot computed`
+        })
+    }
+  })
+
+  server.post(`/customers`, (req, res) => {
+    const token = req.headers.authorization.replace(`Bearer `, ``)
+
+    if ((token !== `undefined`) && (token !== ``)) {
+      jwt.verify(token, config.auth.secret, (err, verification) => {
+        console.log(verification)
+        if (err) {
+          console.log(err)
+          return res
+            .status(401)
+            .send({
+              message: `JWT authentication failed`
+          })
+        }
+
+        tableCustomers.findOne({ where: {
+          email: req.body.email,
+          relation_id: verification.relation_id
+        } })
+          .then((customer) => {
+            if (customer) {
+              return res
+                .status(400)
+                .send({
+                  message: `customer already added`
+                })
+            } else {
+              const data = req.body
+
+              tableCustomers.create({
+                relation_id: verification.relation_id,
+                forename: data.forename,
+                surname: data.surname,
+                email: data.email,
+                phone: data.phone,
+                gender: data.gender,
+                age: data.age
+              }).then(customer => {
+                return res
+                  .status(200)
+                  .send({
+                    message: `Customer added`
+                  })
+              })
+            }
+          })
+          .catch((err) => {
+            if (err) console.log(err)
+
+            return res
+              .status(500)
+              .send({
+                message: `Internal server error`
+              })
+          })
+      })
+    } else {
+      return res
+        .status(400)
+        .send({
+          message: `Invalid data - cannot computed`
+        })
+    }
+  })
+
+  server.put(`/customers/:customerId`, (req, res) => {
+    const token = req.headers.authorization.replace(`Bearer `, ``)
+
+    if ((token !== `undefined`) && (token !== ``)) {
+      jwt.verify(token, config.auth.secret, (err, verification) => {
+        if (err) {
+          console.log(err)
+          return res
+            .status(401)
+            .send({
+              message: `JWT authentication failed`
+          })
+        }
+
+        tableCustomers.findOne({ where: {
+          customer_id: req.params.customerId,
+          relation_id: verification.relation_id
+        } })
+          .then((customer) => {
+            const data = req.body
+            let updateData = {}
+
+            if (data.forename !== null) updateData[`forename`] = data.forename
+            if (data.surname !== null) updateData[`surname`] = data.surname
+            if (data.email !== null) updateData[`email`] = data.email
+            if (data.phone !== null) updateData[`phone`] = data.phone
+            if (data.gender !== null) updateData[`gender`] = data.gender
+            if (data.age !== null) updateData[`age`] = data.age
+
+            tableCustomers.update(updateData, {
+              where: { id: customer.id } })
+              .then(() => {
+                return res
+                  .status(200)
+                  .send({
+                    message: `Customer updated`
+                  })
+              })
+          })
+          .catch((err) => {
+            if (err) console.log(err)
+
+            return res
+              .status(500)
+              .send({
+                message: `Internal server error`
+              })
+          })
+      })
+    } else {
+      return res
+        .status(400)
+        .send({
+          message: `Invalid data - cannot computed`
+        })
+    }
+  })
+
+  server.delete(`/customers/:customerId`, (req, res) => {
+    const token = req.headers.authorization.replace(`Bearer `, ``)
+
+    if ((token !== `undefined`) && (token !== ``)) {
+      jwt.verify(token, config.auth.secret, (err, verification) => {
+        if (err) {
+          console.log(err)
+          return res
+            .status(401)
+            .send({
+              message: `JWT authentication failed`
+          })
+        }
+
+        tableCustomers.destroy({ where: {
+          customer_id: req.params.customerId,
+          relation_id: verification.relation_id,
+          surname: req.body.surname
+        } })
+          .then(() => {
+            return res
+              .status(200)
+              .send({
+                message: `Customer deleted`
+              })
+          })
+          .catch((err) => {
+            if (err) console.log(err)
+
+            return res
+              .status(500)
+              .send({
+                message: `Internal server error`
+              })
+          })
+      })
+    } else {
+      return res
+        .status(400)
+        .send({
+          message: `Invalid data - cannot computed`
+        })
+    }
+  })
+
  // DEBUGGING PURPOSE ONLY
   server.get(`/resetDB`, (req, res) => {
-    dbTable.sync({force: true})
+    tableUsers.sync({force: true})
+    tableCustomers.sync({force: true})
    .then(() => {
      res.send(`db reset`)
      res.end()
